--- a/ui/NewKey.ui
+++ b/ui/NewKey.ui
@@ -234,6 +234,12 @@
        <property name="text">
         <string>C&amp;reate</string>
        </property>
+       <property name="autoDefault">
+        <bool>false</bool>
+       </property>
+       <property name="default">
+        <bool>true</bool>
+       </property>
       </widget>
      </item>
     </layout>
@@ -242,6 +248,10 @@
  </widget>
  <tabstops>
   <tabstop>keyDesc</tabstop>
+  <tabstop>keyType</tabstop>
+  <tabstop>keyLength</tabstop>
+  <tabstop>curveBox</tabstop>
+  <tabstop>PushButton1</tabstop>
   <tabstop>PushButton2</tabstop>
  </tabstops>
  <resources/>
