--- a/ui/PassRead.ui
+++ b/ui/PassRead.ui
@@ -35,9 +35,6 @@
          <strikeout>false</strikeout>
         </font>
        </property>
-       <property name="text">
-        <string>Password</string>
-       </property>
       </widget>
      </item>
      <item>
@@ -94,11 +91,7 @@
      </property>
      <layout class="QGridLayout" name="gridLayout">
       <item row="0" column="0">
-       <widget class="QLabel" name="label">
-        <property name="text">
-         <string>Password</string>
-        </property>
-       </widget>
+       <widget class="QLabel" name="label"/>
       </item>
       <item row="0" column="1">
        <widget class="QLineEdit" name="pass">
