--- a/ui/PassRead.ui
+++ b/ui/PassRead.ui
@@ -79,6 +79,9 @@
      <property name="text">
       <string/>
      </property>
+     <property name="wordWrap">
+      <bool>true</bool>
+     </property>
     </widget>
    </item>
    <item>
