--- a/ui/NewCrl.ui
+++ b/ui/NewCrl.ui
@@ -6,17 +6,11 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>358</width>
-    <height>325</height>
+    <width>360</width>
+    <height>433</height>
    </rect>
   </property>
-  <layout class="QVBoxLayout">
-   <property name="spacing">
-    <number>6</number>
-   </property>
-   <property name="margin">
-    <number>9</number>
-   </property>
+  <layout class="QVBoxLayout" name="verticalLayout_2">
    <item>
     <layout class="QHBoxLayout">
      <property name="spacing">
@@ -95,75 +89,105 @@
      <property name="title">
       <string>Dates</string>
      </property>
-     <layout class="QGridLayout">
-      <property name="margin">
-       <number>9</number>
-      </property>
-      <property name="spacing">
-       <number>6</number>
-      </property>
-      <item row="1" column="0">
-       <widget class="QLabel" name="label_2">
-        <property name="text">
-         <string>next update</string>
+     <layout class="QVBoxLayout" name="verticalLayout">
+      <item>
+       <layout class="QGridLayout" name="gridLayout_2">
+        <item row="0" column="0">
+         <widget class="QLabel" name="label">
+          <property name="text">
+           <string>last update</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="1">
+         <widget class="Validity" name="lastUpdate">
+          <property name="calendarPopup">
+           <bool>true</bool>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="0">
+         <widget class="QLabel" name="label_2">
+          <property name="text">
+           <string>next update</string>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="1">
+         <widget class="Validity" name="nextUpdate">
+          <property name="calendarPopup">
+           <bool>true</bool>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </item>
+      <item>
+       <widget class="Line" name="line">
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
         </property>
        </widget>
       </item>
-      <item row="0" column="0">
-       <widget class="QLabel" name="label">
-        <property name="text">
-         <string>last update</string>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="1">
-       <widget class="Validity" name="lastUpdate">
-        <property name="displayFormat">
-         <string>yyyy-MM-dd hh:mm</string>
-        </property>
-        <property name="calendarPopup">
-         <bool>true</bool>
-        </property>
-        <property name="timeSpec">
-         <enum>Qt::UTC</enum>
-        </property>
-       </widget>
-      </item>
-      <item row="1" column="1">
-       <widget class="Validity" name="nextUpdate">
-        <property name="displayFormat">
-         <string>yyyy-MM-dd hh:mm</string>
-        </property>
-        <property name="calendarPopup">
-         <bool>true</bool>
-        </property>
-        <property name="timeSpec">
-         <enum>Qt::UTC</enum>
-        </property>
-       </widget>
+      <item>
+       <layout class="QGridLayout" name="gridLayout">
+        <item row="0" column="0">
+         <widget class="QLineEdit" name="validNumber"/>
+        </item>
+        <item row="0" column="1">
+         <widget class="QComboBox" name="validRange">
+          <item>
+           <property name="text">
+            <string>Days</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>Months</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>Years</string>
+           </property>
+          </item>
+         </widget>
+        </item>
+        <item row="1" column="0">
+         <widget class="QCheckBox" name="midnightCB">
+          <property name="text">
+           <string>Midnight</string>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="1">
+         <widget class="QPushButton" name="applyTime">
+          <property name="text">
+           <string>Apply</string>
+          </property>
+         </widget>
+        </item>
+       </layout>
       </item>
      </layout>
     </widget>
    </item>
    <item>
-    <layout class="QHBoxLayout">
-     <property name="spacing">
-      <number>6</number>
+    <widget class="QGroupBox" name="groupBox_3">
+     <property name="title">
+      <string>Hashing algorithm</string>
      </property>
-     <property name="margin">
-      <number>0</number>
-     </property>
-     <item>
-      <widget class="QLabel" name="label_3">
-       <property name="text">
-        <string>Hashing algorithm</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="hashBox" name="hashAlgo"/>
-     </item>
-    </layout>
+     <widget class="hashBox" name="hashAlgo">
+      <property name="geometry">
+       <rect>
+        <x>30</x>
+        <y>30</y>
+        <width>205</width>
+        <height>26</height>
+       </rect>
+      </property>
+     </widget>
+    </widget>
    </item>
    <item>
     <widget class="QGroupBox" name="groupBox_2">
@@ -252,6 +276,9 @@
    <extends>QDateTimeEdit</extends>
    <header>widgets/validity.h</header>
    <container>1</container>
+   <slots>
+    <slot>hideTimeCheck(int)</slot>
+   </slots>
   </customwidget>
   <customwidget>
    <class>hashBox</class>
@@ -260,7 +287,6 @@
   </customwidget>
  </customwidgets>
  <tabstops>
-  <tabstop>hashAlgo</tabstop>
   <tabstop>authKeyId</tabstop>
   <tabstop>subAltName</tabstop>
   <tabstop>okButton</tabstop>
@@ -275,8 +301,8 @@
    <slot>accept()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>224</x>
-     <y>332</y>
+     <x>349</x>
+     <y>422</y>
     </hint>
     <hint type="destinationlabel">
      <x>96</x>
@@ -291,12 +317,44 @@
    <slot>reject()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>305</x>
-     <y>332</y>
+     <x>89</x>
+     <y>404</y>
     </hint>
     <hint type="destinationlabel">
      <x>179</x>
      <y>282</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>midnightCB</sender>
+   <signal>stateChanged(int)</signal>
+   <receiver>nextUpdate</receiver>
+   <slot>hideTimeCheck(int)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>56</x>
+     <y>231</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>211</x>
+     <y>154</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>midnightCB</sender>
+   <signal>stateChanged(int)</signal>
+   <receiver>lastUpdate</receiver>
+   <slot>hideTimeCheck(int)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>115</x>
+     <y>228</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>184</x>
+     <y>125</y>
     </hint>
    </hints>
   </connection>
