After all we are able to convert all extensions to config
Add a button to the certificate detila dialog to show the
extensions as OpenSSL config

improve AuthKeyId

Allow selecting public keys for certificates.
This works if it is signed by an other cert.

--- a/ui/CertDetail.ui
+++ b/ui/CertDetail.ui
@@ -356,17 +356,18 @@
       <attribute name="title">
        <string>&amp;Extensions</string>
       </attribute>
-      <layout class="QVBoxLayout">
-       <property name="spacing">
-        <number>6</number>
-       </property>
-       <property name="margin">
-        <number>11</number>
-       </property>
+      <layout class="QVBoxLayout" name="verticalLayout">
        <item>
         <widget class="QTextEdit" name="v3extensions">
          <property name="readOnly">
           <bool>true</bool>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="showExt">
+         <property name="text">
+          <string>Show config</string>
          </property>
         </widget>
        </item>
