More support for public keys
Extract public key from cert and request
Show public keys in requests- and cert-details in red
Allow using public keys for certs. Useful if not selfsigning

--- a/ui/CertDetail.ui
+++ b/ui/CertDetail.ui
@@ -216,7 +216,7 @@
           <item row="2" column="0">
            <widget class="QLabel" name="TextLabel6">
             <property name="text">
-             <string>Private key</string>
+             <string>Key</string>
             </property>
            </widget>
           </item>
