Improve Columns of all Items Feature Request [849713]
Keys: Sort Keysize numerical
Certs: CA, fingerprints, start date (notBefore)
Crl: CRL number , Last update

Requests, Crls, Templates, Certs: All subject items and the full name

--- a/ui/MainWindow.ui
+++ b/ui/MainWindow.ui
@@ -244,7 +244,7 @@
          <number>8</number>
         </property>
         <item>
-         <widget class="CertTreeView" name="certView"/>
+         <widget class="XcaTreeView" name="certView"/>
         </item>
         <item>
          <widget class="QFrame" name="certButtons">
@@ -552,11 +552,6 @@
  <customwidgets>
   <customwidget>
    <class>XcaTreeView</class>
-   <extends>QTreeView</extends>
-   <header>widgets/XcaTreeView.h</header>
-  </customwidget>
-  <customwidget>
-   <class>CertTreeView</class>
    <extends>QTreeView</extends>
    <header>widgets/XcaTreeView.h</header>
   </customwidget>
